fix performance docker